# Save-the-Raccoon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  abilities.txt  build.sh  cmake.sh  commun.h  donnees.h  fonctions_fichiers.c  fonctions_fichiers.h  main.c  menu_backgroud.txt  menu_background.txt  option.c  option.h  player.c  player.h  ressources.c  ressources.h  sdl.c  sdl.h  sdl2-light.c  sdl2-light.h  sdl2.sh  sprite.c  sprite.h  test_fichier.c  world.c  world.h
assets/: credits.txt
assets/racoon/: razz.xml
levels/: level_0.txt  level_1.txt  level_2.txt
result/: result.txt
